# VKSplatter

./: .gitignore  CMakeLists.txt  README.md
application/: HelloTriangle.cpp  main.cpp
engine/src/: BaseVk.h
engine/src/assetsystem/: AssetIO.h  AssetTypes.h  Mesh.h  ResourceSystem.cpp  ResourceSystem.h
engine/src/core/: Application.cpp  Application.h  Clock.cpp  WindowVk.cpp
engine/src/core/containers/: Hashmap.h
engine/src/core/logging/: Logger.cpp  Logger.h
engine/src/render/: FrameHandler.cpp  FrameHandler.h  GPUResource.h  GPUResourceSystem.cpp  GPUResourceSystem.h  MaterialSystem.cpp  MaterialSystem.h  Passes.cpp  Passes.h  RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h  VertexDescriptions.cpp  VertexDescriptions.h
engine/src/scene/: Camera.cpp  Light.cpp  Light.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
engine/src/vulkan/: Buffer.cpp  Buffer.h  CommandPool.h  Descriptor.h  GBuffers.cpp  LogicalDevice.cpp  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  SyncObjects.cpp  Texture.cpp  Texture.h
engine/src/vulkan/config/: PipelineConfigs.h
engine/src/vulkan/utils/: PipelineHelper.h  RessourceHelper.cpp
gaussiansplat/: gaussiansplat.h
includes/: BaseVk.h  Buffer.h  CommandPool.h  ContextController.h  HelloTriangle.h  LogicalDevice.h  PhysicalDevice.h  Pipeline.h  QueueFam.h  RenderPass.h  SwapChain.h  SyncObjects.h  Texture.h  Uniforms.h  VertexDescriptions.h  VulkanInstance.h  VulkanUtils.h
includes/assetsystem/: AssetIO.h  AssetRegistry.h  AssetTypes.h  Material.h  Mesh.h  ResourceSystem.h  TextureC.h
includes/core/: Clock.h  Events.h  EventsSub.h  Inputs.h  InputsCode.h  WindowInterface.h  WindowVk.h
includes/render/: FrameHandler.h  GPUResource.h  GPUResourceSystem.h  RenderQueue.h  Renderer.h  ResourceGPUManager.h  RessourcesGPU.h  VertexDescriptions.h
includes/scene/: AssetRegistry.h  Camera.h  Drawable.h  Material.h  Mesh.h  Scene.h  TextureC.h
includes/temp/: coreIdea  temp
includes/temp/Applayer/: application.h
includes/temp/Memory/: Memory.h
includes/temp/logging/: Logger.cpp  Logger.h
includes/vulkan/: BaseVk.h  Buffer.h  CommandPool.h  ContextController.h  Descriptor.h  GBuffers.h  LogicalDevice.h  PhysicalDevice.h  Pipeline.h  QueueFam.h  RenderPass.h  SwapChain.h  SyncObjects.h  Texture.h  VulkanInstance.h  VulkanUtils.h
includes/vulkan/config/: PipelineConfigs.h  RessourceConfigs.h
includes/vulkan/utils/: PipelineHelper.h  RessourceHelper.h
ressources/models/: hearthspring.mtl
ressources/shaders/: compile.sh  frag.spv  normals.vert  shader (Copy 2).vert  shader (Copy).vert  shader.frag  shader.vert  vert.spv
src/: Buffer.cpp  CommandPool.cpp  ContextController.cpp  HelloTriangle.cpp  HelloTriangle.h  LogicalDevice.cpp  PhysicalDevice.cpp  Pipeline.cpp  QueueFam.cpp  RenderPass.cpp  SwapChain.cpp  SyncObjects.cpp  Texture.cpp  Uniforms.cpp  VertexDescriptions.cpp  VulkanInstance.cpp  main.cpp
src/assetsystem/: AssetIO.cpp  AssetRegistry.cpp  AssetRegistry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ResourceSystem.cpp
src/core/: Application.cpp  Application.h  EventsSub.h  WindowVk.cpp  WindowVk.h
src/core/containers/: CircularVector.h  Hashmap.h
src/core/containers/tests/: Containerstest.cpp
src/core/filesystem/: Filesystem.cpp  Filesystem.h
src/core/logging/: Logger.cpp  Logger.h
src/core/memory/: Memory.cpp  Memory.h
src/core/memory/tests/: Memorytest.cpp
src/render/: FrameHandler.cpp  GPUResource.cpp  GPUResourceSystem.cpp  MaterialSystem.cpp  MaterialSystem.h  Passes.cpp  Passes.h  RenderQueue.cpp  RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h  ResourceGPUManager.cpp  RessourcesGPU.cpp  VertexDescriptions.cpp
src/scene/: AssetRegistry.cpp  Camera.cpp  Camera.h  Drawable.cpp  Light.cpp  Light.h  Material.cpp  Scene.cpp  Scene.h  Transform.cpp
src/scene/geometry/: Extents.h  Frustum.h
src/vulkan/: BaseVk.h  Buffer.cpp  Buffer.h  CommandPool.cpp  ContextController.cpp  ContextController.h  Descriptor.cpp  GBuffers.h  LogicalDevice.cpp  PhysicalDevice.cpp  Pipeline.cpp  Pipeline.h  QueueFam.cpp  RenderPass.cpp  SwapChain.cpp  SwapChain.h  SyncObjects.cpp  Texture.cpp  Texture.h  VulkanInstance.cpp  VulkanInstance.h
src/vulkan/config/: PipelineConfigs.h
src/vulkan/utils/: PipelineHelper.cpp  PipelineHelper.h  RessourceHelper.cpp  RessourceHelper.h
